--- a/bgd/bgd-route.yaml
+++ b/bgd/bgd-route.yaml
@@ -7,7 +7,7 @@ metadata:
   name: bgd
   namespace: bgd
 spec:
-  host: "ddcluster-a01ee4194ed985a1e32b1d96fd4ae346-0000.us-south.containers.appdomain.cloud"
+  host: "bgd.ddcluster-a01ee4194ed985a1e32b1d96fd4ae346-0000.us-south.containers.appdomain.cloud"
   port:
     targetPort: 8080
   to:
