--- a/bgdk/overlays/cluster1/bgd-route.yaml
+++ b/bgdk/overlays/cluster1/bgd-route.yaml
@@ -1,3 +1,3 @@
 - op: replace
   path: /spec/host
-  value: "ddcluster-a01ee4194ed985a1e32b1d96fd4ae346-0000.us-south.containers.appdomain.cloud"
+  value: "bgd.ddcluster-a01ee4194ed985a1e32b1d96fd4ae346-0000.us-south.containers.appdomain.cloud"
