--- a/bgdk/overlays/cluster1/bgd-deployment.yaml
+++ b/bgdk/overlays/cluster1/bgd-deployment.yaml
@@ -1,3 +1,6 @@
 - op: replace
   path: /spec/template/spec/containers/0/env/0/value
   value: blue
+- op: replace
+  path: /spec/replicas
+  value: 2
